--- a/collectd-fritzbox/fritzcollectd.conf
+++ b/collectd-fritzbox/fritzcollectd.conf
@@ -6,11 +6,11 @@ LoadPlugin network
 <Plugin python>
         Import "fritzcollectd"
         <Module fritzcollectd>
-                Address "FritzBox ipaddress"
+                Address "192.168.0.1"
                 Port 49000
-                User "FritzBox username"
-                Password "FritzBox password"
-                Hostname "FritzBox"
+                User "Darkage"
+                Password "Pia@gelinAdarK1"
+                Hostname "FRITZ!Box 7590"
                 Instance "1"
                 Verbose "False"
         </Module>
