--- a/collectd-fritzbox/fritzcollectd.conf
+++ b/collectd-fritzbox/fritzcollectd.conf
@@ -8,9 +8,9 @@ LoadPlugin network
         <Module fritzcollectd>
                 Address "FritzBox ipaddress"
                 Port 49000
-                User "FritzBox username"
-                Password "FritzBox password"
-                Hostname "FritzBox"
+                User "Darkage"
+                Password "Pia@gelinAdarK1"
+                Hostname "FRITZ!Box 7590"
                 Instance "1"
                 Verbose "False"
         </Module>
