--- a/collectd-fritzbox/fritzcollectd.conf
+++ b/collectd-fritzbox/fritzcollectd.conf
@@ -6,10 +6,10 @@ LoadPlugin network
 <Plugin python>
         Import "fritzcollectd"
         <Module fritzcollectd>
-                Address "FritzBox ipaddress"
+                Address "192.168.0.1"
                 Port 49000
-                User "FritzBox username"
-                Password "FritzBox password"
+                User "Darkage"
+                Password "Pia@gelinAdarK_01@"
                 Hostname "FritzBox"
                 Instance "1"
                 Verbose "False"
